# ByteFlow

./: .gitignore  README.md  byteflow_memory.json  byteflow_memory_profile.json  example.py  math_plugin.py  pyproject.toml
byteflow/: agent.py  builtin_tools.py  chunking.py  cli.py  codehelp.py  companion.py  desktop_tools.py  embeddings.py  extension_loader.py  file_reading.py  intent_classifier.py  intent_data.py  intent_feedback.py  memory.py  plugin.py  profile.py  sandbox.py  search.py  tools.py  tune.py  vector_store.py  voice.py  weather.py  web_search.py  workflow.py
byteflow/extensions/: README.md
byteflow/extensions/example_hello/: byteflow_plugin.py
byteflow/providers/: ollama_provider.py
tests/: test_byteflow.py
